[package]
name = "cors-proxy"
authors = ["Sem <931684+sembrestels@users.noreply.github.com>"]
description = "CORS Proxy to the Giveth GraphQL API"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-contrib-http = "0.0.9"
spin-sdk = "5.0.0"

[workspace]
