[package]
name = "tokenlist"
authors = ["Sem <931684+sembrestels@users.noreply.github.com>"]
description = "Token List API mixing Coingecko and Superfluid"
version = "0.1.0"
rust-version = "1.78"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1"
spin-sdk = "3.1.0"

[workspace]
